app/assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-background text-on-background font-body min-h-screen pb-32;
  }
}

.material-symbols-outlined {
  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
}

.hide-scrollbar::-webkit-scrollbar { display: none; }
.hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }

/* Custom range slider styling */
input[type=range] {
  -webkit-appearance: none;
  background: transparent;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 12px;
  background: #eaeef1;
  border-radius: 9999px;
}
input[type=range]::-webkit-slider-thumb {
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  background: #005da9;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -8px;
  box-shadow: 0 4px 12px rgba(0, 93, 169, 0.2);
}

